# gzdec

./: AUTHORS  COPYING  Makefile.am  README  README.md  autogen.sh  configure.ac
plugins/: Makefile.am  gstgzdec.c  gstgzdec.h  gstgzdecplugin.c
